# zephyr

.devcontainer/: devcontainer.rst
.devcontainer/bsim/: devcontainer.json
doc/connectivity/bluetooth/: bluetooth-dev.rst
doc/releases/: migration-guide-4.0.rst  release-notes-3.5.rst
drivers/: CMakeLists.txt
drivers/bluetooth/hci/: CMakeLists.txt  h4.c  h5.c
drivers/bluetooth/hci_drv_next/: bt_hci_alloc.c  bt_hci_alloc2.c  bt_hci_alloc3.c  h4_encapsulate.c  h4_smoll.c  hci_allocators.c  hci_drv_h4.c  hci_drv_h4_featureless.c  hci_drv_next.c  hci_drv_spi_blunrg.c  hci_drv_uart.c  hci_drv_uart_sync.c  onebigfile.h
drivers/bluetooth/hci_stream/: h4.c
drivers/nbt/: CMakeLists.txt  nbt_uart.c
include/bluetooth/: gap_appearance.h
include/zephyr/: kernel.h
include/zephyr/bluetooth/: bluetooth.h  buf.h  conn.h  gatt.h  hci.h  l2cap.h  uuid.h
include/zephyr/logging/: log_backend_std.h
scripts/: fix_include_guard.py  pcapng.py  syslog_to_pcap.py  test_pcapng.py  write_pcap.py
snippets/uart-1m-console/: README.rst  snippet.yml  uart-1m-console.overlay
subsys/: CMakeLists.txt  Kconfig
subsys/bluetooth/: Kconfig
subsys/bluetooth/audio/: aics.c  ascs.c  bap_broadcast_assistant.c  bap_unicast_client.c  csip_set_member.c  has.c  mcs.c  micp_mic_dev.c  mpl.c  pacs.c  tbs.c  vcp_vol_rend.c  vocs.c
subsys/bluetooth/common/: dummy.c  log.c  log.h
subsys/bluetooth/host/: CMakeLists.txt  (+23 more)
subsys/nbt/: CMakeLists.txt  Kconfig
subsys/task_wdt/: Kconfig  task_wdt_auto_init.c  task_wdt_syswq_stall.c
tests/bsim/nbt/central/: CMakeLists.txt  main.c  prj.conf
(+97 files in other folders)
